...
            route: '/super-admin/companies'),
        NavDestinationSpec(
            label: 'Plans',
            icon: Icons.workspace_premium_outlined,
            route: '/super-admin/plans'),
        NavDestinationSpec(
            label: 'Billing',
            icon: Icons.fact_check_outlined,
            route: '/super-admin/subscriptions'),
        NavDestinationSpec(
            label: 'Reports',
            icon: Icons.bar_chart_outlined,
            route: '/super-admin/reports'),
...
